--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 .App {
-  text-align: center;
+  
+  width:500px;
+  height:500px;
+  margin:100px;
+  background: linear-gradient(90deg, #c29024 0%, rgb(33, 121, 9) 35%, rgb(255, 179, 0) 100%);
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  font-size:24px;
+  font-weight:bold;
 }
 
 .App-logo {
@@ -27,6 +36,8 @@
 .App-link {
   color: #61dafb;
 }
+
+
 
 @keyframes App-logo-spin {
   from {
